# hs-dosyear-leapchk

./: CHANGELOG.md  Dockerfile  Dockerfile.wasi.txt  README.md  build-img.sh  doc-web.sh  example.sh  hs-dosyear-leapchk.cabal  opt.sh
app/: Main.hs
src/: DosyearLeapCheck.hs
test/: Unit.hs
