cabal-version:      3.14
name:               hs-dosyear-leapchk
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             yanagitani
maintainer:         takanori.yanagitani@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror

executable hs-dosyear-leapchk
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.17 && < 4.23,
                      hs-dosyear-leapchk
    hs-source-dirs:   app
    default-language: GHC2021

library
    import:           warnings
    exposed-modules:  DosyearLeapCheck
    build-depends:
        base >= 4.17 && < 4.23,
    hs-source-dirs:   src
    default-language: GHC2021

test-suite hs-dosyear-leapchk-unit
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Unit.hs
    hs-source-dirs:   test
    build-depends:    base >= 4.17 && < 4.23,
                      hs-dosyear-leapchk
    default-language: GHC2021
